--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.zxxk.demo.nutrition"
-        minSdkVersion 11
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -32,4 +32,6 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.3.0'
     compile files('libs/universal-image-loader-1.9.3-with-sources.jar')
     compile files('libs/easyandroidanimationslibrary-v0.5.jar')
+    compile 'com.hkm:hkmprocessbuttons:1.2.4'
+    compile 'com.rengwuxian.materialedittext:library:2.1.4'
 }
